--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "random.h": "c"
+        "random.h": "c",
+        "cmath": "c",
+        "complex": "c"
     }
 }
