--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "random.h": "c",
         "cmath": "c",
-        "complex": "c"
+        "complex": "c",
+        "iterator": "c"
     }
 }
